--- a/index.html
+++ b/index.html
@@ -22,97 +22,21 @@
 
                 <ul class="site-nav__items">
                     <li class="nav-item">
-                        <a class="nav-item__link" href="#">Home</a>
+                        <a class="nav-item__link" href="#/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-item__link" href="#">People</a>
+                        <a class="nav-item__link" href="#/">People</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-item__link" href="#">Contact</a>
+                        <a class="nav-item__link" href="#/contact">Contact</a>
                     </li>
                 </ul>
             </nav>
         </header>
 
-        <section class="site-section site-section--full">
-            <div class="hero">
-                <div class="hero__slider">
-                    <ul class="cases">
-                        <li class="case">
-                            <header class="case__info">
-                                <h2 class="case__title">Walibi</h2>
-                                <a class="case__link" href="#">View case</a>
-                            </header>
-                            <figure class="case__figure">
-                                <img class="case__image" alt="" src="assets/imgs/case-1.jpg">
-                            </figure>
-                        </li>
+        <main class="site-content">
 
-                        <li class="case">
-                            <header class="case__info">
-                                <h2 class="case__title">Florensis</h2>
-                                <a class="case__link" href="#">View case</a>
-                            </header>
-                            <figure class="case__figure">
-                                <img class="case__image" alt="" src="assets/imgs/case-2.jpg">
-                            </figure>
-                        </li>
-
-                        <li class="case">
-                            <header class="case__info">
-                                <h2 class="case__title">Oxxio</h2>
-                                <a class="case__link" href="#">View case</a>
-                            </header>
-                            <figure class="case__figure">
-                                <img class="case__image" alt="" src="assets/imgs/case-3.png">
-                            </figure>
-                        </li>
-                    </ul>
-                </div>
-
-                <nav class="hero__slider-nav">
-                    <div class="slider-nav">
-                        <button class="slider-nav__button slider-nav__button--previous"
-                                type="button">
-                            <b class="screen-reader-text">Previous slide</b>
-                            <i class="i i--arrow-left"></i>
-                        </button>
-
-                        <button class="slider-nav__button slider-nav__button--next"
-                                type="button">
-                            <b class="screen-reader-text">Next slide</b>
-                            <i class="i i--arrow-right"></i>
-                        </button>
-                    </div>
-                </nav>
-
-                <a class="hero__scroll-anchor" href="#about">
-                    <b class="screen-reader-text">Scroll down</b>
-                    <i class="i i--scroll"></i>
-                </a>
-            </div>
-        </section>
-
-        <section class="site-section">
-            <div class="about" id="about">
-                <h2 class="about__title">We are Tam Tam</h2>
-                <div class="about__content">
-                    <p>Tam Tam is a full service digital agency focusing on Dutch Digital Service Design. We combine strategy, design, technology and interaction to make the digital interactions between company and customer valuable and memorable. We work for awesome brands with a team of 120 digitals from our office in Amsterdam. Making great work and having a blast doing it. That’s what we believe in.</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="site-section">
-            <div class="feed">
-                <header class="feed__header">
-                    <h2 class="feed__cta">Follow us on Instagram</h2>
-                    <a class="feed__link" href="#">@tamtamnl</a>
-                </header>
-
-                <div class="pics">
-                </div>
-            </div>
-        </section>
+        </main>
 
         <footer class="site-footer">
             <ul class="social-networks">
