--- a/public/contact.html
+++ b/public/contact.html
@@ -34,92 +34,94 @@
             </nav>
         </header>
 
-        <section class="site-section">
-            <div class="contact">
-                <form class="contact-form" name="contact-form" action="#" method="post">
-                    <h2 class="contact-form__cta">
-                        We would love to hear from you
-                    </h2>
+        <main class="site-content">
+            <section class="site-section site-section--full">
+                <div class="contact">
+                    <form class="contact-form" name="contact-form" action="#" method="post">
+                        <h2 class="contact-form__cta">
+                            We would love to hear from you
+                        </h2>
 
-                    <div class="form-message">
-                        <div class="form-message__error">
-                            <div class="form-message__icon">
-                                <i class="i i--error"></i>
+                        <div class="form-message">
+                            <div class="form-message__error">
+                                <div class="form-message__icon">
+                                    <i class="i i--error"></i>
+                                </div>
+                                <p class="form-message__text">
+                                    Please complete the form and try again.
+                                </p>
                             </div>
-                            <p class="form-message__text">
-                                Please complete the form and try again.
-                            </p>
+
+                            <div class="form-message__success">
+                                <div class="form-message__icon">
+                                    <i class="i i--check"></i>
+                                </div>
+                                <p class="form-message__text">
+                                    Thank you, we have received your message.
+                                </p>
+                            </div>
+
                         </div>
 
-                        <div class="form-message__success">
-                            <div class="form-message__icon">
-                                <i class="i i--check"></i>
-                            </div>
-                            <p class="form-message__text">
-                                Thank you, we have received your message.
-                            </p>
-                        </div>
+                        <div class="contact-form__container">
+                            <div class="contact-form__inputs">
+                                <fieldset class="contact-form__fieldset contact-form__fieldset--name">
+                                    <label class="contact-form__label">
+                                        <input class="contact-form__input"
+                                               name="first-name"
+                                               type="text" 
+                                               placeholder="First name">
+                                        <p class="contact-form__input-warning">
+                                            We need your first name.
+                                        </p>
+                                    </label>
 
-                    </div>
+                                    <label class="contact-form__label">
+                                        <input class="contact-form__input" 
+                                               type="text" 
+                                               name="last-name"
+                                               placeholder="Last name">
+                                        <p class="contact-form__input-warning">
+                                            We need your last name.
+                                        </p>
+                                    </label>
+                                </fieldset>
 
-                    <div class="contact-form__container">
-                        <div class="contact-form__inputs">
-                            <fieldset class="contact-form__fieldset contact-form__fieldset--name">
-                                <label class="contact-form__label">
-                                    <input class="contact-form__input"
-                                           name="first-name"
-                                           type="text" 
-                                           placeholder="First name">
-                                    <p class="contact-form__input-warning">
-                                        We need your first name.
-                                    </p>
-                                </label>
+                                <fieldset class="contact-form__fieldset contact-form__fieldset--contact">
+                                    <label class="contact-form__label">
+                                        <input class="contact-form__input" 
+                                               type="email" 
+                                               name="email"
+                                               placeholder="Your e-mail address">
+                                        <p class="contact-form__input-warning">
+                                            Please use a valid e-mail address.
+                                        </p>
+                                    </label>
 
-                                <label class="contact-form__label">
-                                    <input class="contact-form__input" 
-                                           type="text" 
-                                           name="last-name"
-                                           placeholder="Last name">
-                                    <p class="contact-form__input-warning">
-                                        We need your last name.
-                                    </p>
-                                </label>
-                            </fieldset>
+                                    <label class="contact-form__label">
+                                        <input class="contact-form__input" 
+                                               type="tel"
+                                               name="phone-number"
+                                               placeholder="Your phone number (optional)">
+                                    </label>
+                                </fieldset>
 
-                            <fieldset class="contact-form__fieldset contact-form__fieldset--contact">
-                                <label class="contact-form__label">
-                                    <input class="contact-form__input" 
-                                           type="email" 
-                                           name="email"
-                                           placeholder="Your e-mail address">
+                                <label class="contact-form__label contact-form__label--textarea contact-form__label--valid">
+                                    <textarea class="contact-form__input contact-form__input--textarea" name="message" placeholder="Your message…"></textarea>
                                     <p class="contact-form__input-warning">
                                         Please use a valid e-mail address.
                                     </p>
                                 </label>
+                            </div>
 
-                                <label class="contact-form__label">
-                                    <input class="contact-form__input" 
-                                           type="tel"
-                                           name="phone-number"
-                                           placeholder="Your phone number (optional)">
-                                </label>
-                            </fieldset>
-
-                            <label class="contact-form__label contact-form__label--textarea contact-form__label--valid">
-                                <textarea class="contact-form__input contact-form__input--textarea" name="message" placeholder="Your message…"></textarea>
-                                <p class="contact-form__input-warning">
-                                    Please use a valid e-mail address.
-                                </p>
-                            </label>
+                            <button class="contact-form__button" type="submit">
+                                Send
+                            </button>
                         </div>
-
-                        <button class="contact-form__button" type="submit">
-                            Send
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </section>
+                    </form>
+                </div>
+            </section>
+        </main>
 
         <footer class="site-footer">
             <ul class="social-networks">
