--- a/public/home.html
+++ b/public/home.html
@@ -45,7 +45,11 @@
                                     <a class="case__link" href="#">View case</a>
                                 </header>
                                 <figure class="case__figure">
-                                    <img class="case__image" alt="" src="assets/imgs/case-1.jpg">
+                                    <img class="case__image" 
+                                         alt=""
+                                         srcset="assets/imgs/case-1_320.jpg 320w, assets/imgs/case-1_640.jpg 640w, assets/imgs/case-1_768.jpg 768w, assets/imgs/case-1_1536.jpg 1536w, assets/imgs/case-1_1024.jpg 1024w, assets/imgs/case-1_2048.jpg 2048w, assets/imgs/case-1_1440.jpg 1440w, assets/imgs/case-1.jpg 2880w"
+                                         sizes="(orientation: portrait) 200vw, 100vw"
+                                         src="assets/imgs/case-1_1280.jpg">
                                 </figure>
                             </li>
 
@@ -54,8 +58,11 @@
                                     <h2 class="case__title">Florensis</h2>
                                     <a class="case__link" href="#">View case</a>
                                 </header>
-                                <figure class="case__figure">
-                                    <img class="case__image" alt="" src="assets/imgs/case-2.jpg">
+                                    <img class="case__image" 
+                                         alt=""
+                                         srcset="assets/imgs/case-2_320.jpg 320w, assets/imgs/case-2_640.jpg 640w, assets/imgs/case-2_768.jpg 768w, assets/imgs/case-2_1536.jpg 1536w, assets/imgs/case-2_1024.jpg 1024w, assets/imgs/case-2_2048.jpg 2048w, assets/imgs/case-2_1440.jpg 1440w, assets/imgs/case-2.jpg 2880w"
+                                         sizes="(orientation: portrait) 200vw, 100vw"
+                                         src="assets/imgs/case-2_1280.jpg">
                                 </figure>
                             </li>
 
@@ -65,7 +72,11 @@
                                     <a class="case__link" href="#">View case</a>
                                 </header>
                                 <figure class="case__figure">
-                                    <img class="case__image" alt="" src="assets/imgs/case-3.png">
+                                    <img class="case__image"
+                                         alt=""
+                                         srcset="assets/imgs/case-3_320.jpg 320w, assets/imgs/case-3_640.jpg 640w, assets/imgs/case-3_768.jpg 768w, assets/imgs/case-3_1536.jpg 1536w, assets/imgs/case-3_1024.jpg 1024w, assets/imgs/case-3_2048.jpg 2048w, assets/imgs/case-3_1440.jpg 1440w, assets/imgs/case-3.jpg 2880w"
+                                         sizes="(orientation: portrait) 200vw, 100vw"
+                                         src="assets/imgs/case-3_1280.jpg">
                                 </figure>
                             </li>
                         </ul>
